# shelly

./: .gitignore  CMakeLists.txt
.github/: CODEOWNERS
.github/workflows/: cmake-multi-platform.yml
include/shelly/ast/: Location.hpp
include/shelly/ast/lexer/: Lexer.hpp  Token.hpp  TokenKind.hpp
include/shelly/ast/nodes/: CommandASTNode.hpp
include/shelly/ast/parser/: Parser.hpp
include/shelly/common/: OperationResult.hpp
include/shelly/core/: Shell.hpp
include/shelly/platform/: FileDescriptor.hpp  Pipe.hpp  Process.hpp
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/ast/: CMakeLists.txt
src/ast/lexer/: CMakeLists.txt  Lexer.cpp
src/ast/parser/: CMakeLists.txt  Parser.cpp
src/core/: CMakeLists.txt  Shell.cpp
src/platform/: CMakeLists.txt
src/platform/posix/: CMakeLists.txt  PosixPipeHandle.cpp  PosixPipeHandle.hpp  PosixProcessHandle.cpp
src/platform/windows/: CMakeLists.txt  WindowsPipe.cpp  WindowsProcess.cpp  WindowsProcessHandle.cpp  WindowsProcessHandle.hpp
tests/: CMakeLists.txt
tests/ast/lexer/: CMakeLists.txt  LexerSuite.cpp
